Changes in contact us page

--- a/css/contact-us.css
+++ b/css/contact-us.css
@@ -13,6 +13,7 @@
     padding: 15px;
     margin: 10px;
     position: absolute;
+    background-color: #d2d9d3;
     right: 203px;
     height: 267px;
     border-radius: 15px;
@@ -25,8 +26,12 @@ input{
     font-size: 1rem;
     border-style: none;
     margin: 7px;
-    line-height: 28px;
+    line-height: 26px;
     width: 348px;
+}
+
+::placeholder{
+    color: rgb(180, 171, 171);
 }
 .textarea{
     display: inline-table;
@@ -44,16 +49,23 @@ input{
 }
 .area{
     padding-left: 9px;
+    line-height: 40px;
 }
 
-.btn-1{
+.btn-1,.btn-2{
     cursor: pointer;
-    width: 98%;
-    border: 1px solid black;
-    height: 33px;
-    margin-top: 8px;
+    height: 42px;
+    margin-top: 5px;
     border-style: none;
     border-radius: 7px;
     font-family: 'Ubuntu', sans-serif;
     font-size: 1rem;
+    padding: 12px;
+    background-color: #2e2b2b;
+    width: 120px;
+    color: white;
+    
+}
+.butn{
+    text-align: center;
 }
